--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Sean Stove - Freelance .NET developer</title>
     <link href="css/style.css" rel="stylesheet">
     <!--[if lt IE 9]>
-        <script src="/Content/js/html5shiv.min.js"></script>
+        <script src="js/html5shiv.min.js"></script>
     <![endif]-->
 
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -275,5 +275,7 @@
             <p></p>
         </div>
     </footer>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
