--- a/index.html
+++ b/index.html
@@ -78,19 +78,21 @@
         <div class="wrap-left">
             <h2>Over</h2>
             <p>
-                Enthousiaste software developer met meer dan 9 jaar ervaring in het ontwikkelen van geavanceerde webapplicaties
-                gebruik makend van technologieën zoals ASP.NET MVC en WCF.
+                Enthousiaste software developer met meer dan 10 jaar ervaring in het ontwikkelen van geavanceerde webapplicaties
+                gebruik makend van technologieën zoals ASP.NET MVC en WebAPI.
             </p>
             <p>
                 Ervaring op het gebied van software design, ontwikkeling en deployment met het .NET framework. <br />
                 Goeie kennis van ALM strategie en ontwikkelingsmethodologie.
             </p>
             <p>
+                Daarnaast ook een sterke kennis van frontend frameworks. Zowel javascript (Angular) als css (Bootstrap)
+            </p>
+            <p>
                 Als <strong>freelancer</strong> ben ik <a href="#contact">beschikbaar</a> voor consultancy en freelance opdrachten.
             </p>
             <p>
                 Daarnaast kan u mij ook <a href="#contact">contacteren</a> voor projecten zoals een <strong>website, webshop, webapplicatie...</strong>
-                Deze projecten kunnen eventueel buiten de kantooruren ontwikkeld worden waardoor ik een lager tarief kan aanbieden.
             </p>
             <p class="top-margin">
                 <a href="files/seanstove-cv.pdf" target="_blank" class="download-cv">Download CV</a>
@@ -104,18 +106,13 @@
         <div class="wrap-right">
             <h2>Skills</h2>
             <p>
-                Webontwikkeling op het .NET platform met een sterke kennis van client-side javascript. Ik werk het
-                liefst volgens een agile methodologie, dit zorgt voor een transparante aanpak.
+                Webontwikkeling op het .NET platform met een sterke kennis van javascript (frameworks).
             </p>
             <p>
-                Om een project live
-                te krijgen, maak ik graag gebruik van de vele facetten van het ALM verhaal.
+                Ik werk het liefst volgens een agile methodologie, dit zorgt voor een transparante aanpak.
             </p>
             <p>
-                Ondanks mijn ervaring in
-                een .NET omgeving heb ik een brede interesse in andere programmeertalen en frameworks zoals
-                ruby / rails. Mijn skills hou ik ook up-to-date, dit laat me toe om de juiste technologische oplossing
-                te kiezen voor de gevraagde noden.
+                Om een project live te krijgen, maak ik graag gebruik van de vele facetten van het ALM verhaal.
             </p>
         </div>
         <div class="wrap">
@@ -145,9 +142,6 @@
                         </li>
                         <li>
                             XML / XSLT
-                        </li>
-                        <li>
-                            Ruby
                         </li>
                     </ul>
                 </div>
@@ -217,10 +211,10 @@
                             jQuery
                         </li>
                         <li>
-                            AngularJS
+                            Angular
                         </li>
-                        <li>
-                            Knockout
+                         <li>
+                            Bootstrap
                         </li>
                     </ul>
                 </div>
@@ -277,11 +271,11 @@
                 U kan mij bereiken op volgend e-mail adres: <a href="mailto:info@seanstove.be" class="mail-link">info@seanstove.be</a><br />
             </p>
             <p>
-                Sean Stove <br />
+                Sean Stove Comm. V.<br />
                 Vuurkruiserslaan 44 <br />
                 8870 Izegem <br />
                 West-Vlaanderen <br />
-                BTW: BE 0505.919.732 <br />
+                BTW: BE 0661.846.737 <br />
             </p>
         </div>
     </section>
