--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="reply-to" content="info@seanstove.be">
 
     <title>Sean Stove - Freelance .NET developer</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
         <script src="js/html5shiv.min.js"></script>
     <![endif]-->
@@ -285,6 +285,22 @@
         </div>
     </footer>
     <script src="//code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('a[href*=#]:not([href=#])').click(function () {
+                if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+
+                    var target = $(this.hash);
+                    target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                    if (target.length) {
+                        $('html,body').animate({
+                            scrollTop: target.offset().top
+                        }, 1000);
+                        return false;
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 </html>
