Move favicons to root

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <script src="js/html5shiv.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="icon" sizes="16x16 32x32 64x64" href="img/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="img/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="img/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="img/favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16.png">
-    <link rel="apple-touch-icon" href="img/favicon-57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon-72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon-60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon-120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon-76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon-180.png">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+    <link rel="apple-touch-icon" href="favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-180.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="img/favicon-144.png">
-    <meta name="msapplication-config" content="img/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="favicon-144.png">
+    <meta name="msapplication-config" content="browserconfig.xml">
 
     <style>
         body,ul{padding:0}header nav a:hover,input[type=submit]:hover{text-decoration:underline}.download-cv,h2,h3,header,input[type=submit],label{text-transform:uppercase}.icons,header{text-align:center}@font-face{font-family:'Lato Light';src:url(fonts/lato-light-webfont.eot);src:url(fonts/lato-light-webfont.eot?#iefix) format('embedded-opentype'),url(fonts/lato-light-webfont.woff2) format('woff2'),url(fonts/lato-light-webfont.woff) format('woff'),url(fonts/lato-light-webfont.ttf) format('truetype'),url(fonts/lato-light-webfont.svg#latolight) format('svg');font-weight:400;font-style:normal}@font-face{font-family:Lato;src:url(fonts/lato-regular-webfont.eot);src:url(fonts/lato-regular-webfont.eot?#iefix) format('embedded-opentype'),url(fonts/lato-regular-webfont.woff2) format('woff2'),url(fonts/lato-regular-webfont.woff) format('woff'),url(fonts/lato-regular-webfont.ttf) format('truetype'),url(fonts/lato-regular-webfont.svg#latoregular) format('svg');font-weight:400;font-style:normal}body{font-family:Lato,sans-serif;font-size:14px;margin:0}a{color:#000}header nav{float:right;margin:30px 0}header nav a{display:inline-block;margin-left:85px;text-decoration:none;color:#10846f;letter-spacing:.1em}header svg{margin-top:100px}header svg g{stroke:#fff;stroke-width:1;stroke-miterlimit:10}h1{color:#fff;font-family:'Lato Light',sans-serif;font-size:33px;letter-spacing:.2em;margin-top:5px;font-weight:100}h2{color:#0e715f;font-size:65px;margin:60px 0 10px}input,textarea{display:block;width:100%;padding:6px 12px;font-size:14px;line-height:1.428571429;color:#555;vertical-align:middle;background-color:#fff;border:1px solid #ccc;margin-bottom:12px;margin-top:8px}li{list-style:none}ul{margin:0 auto}input{height:34px}input[type=submit]{width:164px;background-color:#17ba9d;color:#fff;border:1px solid #fff}input[type=submit]:hover{cursor:pointer}input:focus,textarea:focus{border-color:#17ba9d;outline:0}footer{margin:120px auto 30px}.header-image{height:697px;background:url(img/header.jpg) center center;background-size:cover;clear:both}.header-welcome{color:#fff;font-size:164px;font-weight:900;margin:20px 0 0;padding-top:150px}.skills-image{margin-top:-100px;height:213px;background:url(img/skills.jpg) center center;background-size:cover;clear:both}.contact-image{height:906px;background:url(img/contact.jpg) center center;background-size:cover;clear:both}.logo{height:61px;width:48px;background:url(img/logo.jpg);float:left;margin:10px 0}.wrap{margin:0 auto;max-width:960px}.wrap-left{margin-left:20%;margin-right:auto;padding-right:15px;max-width:600px}.wrap-right{margin-right:20%;margin-left:auto;padding-left:15px;max-width:600px}.download-cv{color:#0e715f;padding:10px;border:1px solid #0e715f;text-decoration:none}.contact,.mail-link,.skills,.skills h2{color:#fff}.download-cv:hover{text-decoration:underline}.top-margin{margin-top:40px}.icon-bubble{display:inline-block;vertical-align:top;margin-top:30px}.icon-bubble path{fill:#fff}.margin-left{margin-left:60px}.about{margin-top:-140px}.skills{text-align:right;background-color:#0e715f}.skills h2{padding:0;margin:0}.li-margin{margin-top:10px}.contact{margin-top:-700px}.contact h2{color:#fff;padding:0;margin:0}#lean_overlay{position:fixed;z-index:100;top:0;left:0;height:100%;width:100%;background:#000;display:none}#popup{width:600px;padding:30px;display:none;background:#FFF;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;box-shadow:0 0 4px rgba(0,0,0,.7);-webkit-box-shadow:0 0 4px rgba(0,0,0,.7);-moz-box-shadow:0 0 4px rgba(0,0,0,.7)}#popup-content{color:#666;text-shadow:none}#popup-content li{list-style:disc}.modal-close-btn{position:absolute;top:12px;right:12px;display:block;width:28px;height:28px;z-index:2}.copyright{font-size:12px}@media screen and (max-width:1290px){.wrap-left{margin-left:10%}.wrap-right{margin-right:10%}}@media screen and (max-width:780px){header nav a{margin-left:15px}h2{font-size:35px}.header-welcome{font-size:75px}.wrap-left{margin-left:5%}.icon-bubble,.margin-left{margin-left:5px}.wrap-right{margin-right:5%}.icon-bubble{display:block}#popup{width:180px}}
