--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Sean Stove - Freelance .NET developer</title>
     <!--[if lt IE 9]>
-        <script src="js/html5shiv.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -287,7 +287,7 @@
             <p></p>
         </div>
     </footer>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function () {
             $('a[href*=#]:not([href=#])').click(function () {
