--- a/ar/index.html
+++ b/ar/index.html
@@ -67,10 +67,10 @@
       <h2>AR Window Replacement</h2>
       <p>1. Allow camera access when prompted</p>
       <p>2. Point your device at a window</p>
-      <p>3. Wait for plane detection</p>
+      <p>3. Wait for surface detection</p>
       <p>4. Tap to place the replacement image</p>
     </div>
-    <div id="status">Detecting planes...</div>
+    <div id="status">Initializing AR...</div>
     <button id="startAR">Start AR Experience</button>
 
     <script type="importmap">
@@ -98,12 +98,8 @@
             alpha: true,
           });
 
-          // XR setup
           this.renderer.xr.enabled = true;
-
-          // Detected planes storage
           this.detectedPlanes = new Map();
-          this.replacementImage = null;
 
           this.init();
         }
@@ -118,13 +114,12 @@
           this.replacementTexture = textureLoader.load(
             "/api/placeholder/800/600",
             (texture) => {
-              // Store aspect ratio for later use
               this.imageAspectRatio =
                 texture.image.width / texture.image.height;
             }
           );
 
-          // Create reticle for targeting
+          // Create reticle
           const reticleGeometry = new THREE.RingGeometry(0.15, 0.2, 32);
           const reticleMaterial = new THREE.MeshBasicMaterial({
             color: 0xffffff,
@@ -134,7 +129,7 @@
           this.reticle.visible = false;
           this.scene.add(this.reticle);
 
-          // Add lights
+          // Add light
           const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
           this.scene.add(ambientLight);
         }
@@ -145,40 +140,41 @@
               throw new Error("WebXR not supported");
             }
 
+            // Check available features
             const supported = await navigator.xr.isSessionSupported(
               "immersive-ar"
             );
             if (!supported) {
-              throw new Error("AR not supported");
+              throw new Error("AR not supported on this device");
             }
 
+            // Request session with minimal required features
             const session = await navigator.xr.requestSession("immersive-ar", {
-              requiredFeatures: ["hit-test", "plane-detection"],
+              optionalFeatures: ["hit-test", "plane-detection"],
+              requiredFeatures: ["local"],
             });
 
             session.addEventListener("select", this.onSelect.bind(this));
 
-            // Set up plane detection
-            session.updateWorldTrackingState({
-              planeDetectionState: { enabled: true },
-            });
-
             await this.renderer.xr.setSession(session);
             this.renderer.setAnimationLoop(this.render.bind(this));
 
-            // Hide instructions and show status
+            // Update UI
             document.getElementById("instructions").style.display = "none";
             document.getElementById("status").style.display = "block";
             document.getElementById("startAR").style.display = "none";
+            document.getElementById("status").textContent =
+              "Looking for surfaces...";
           } catch (error) {
-            console.error("Failed to start AR session:", error);
-            alert("Failed to start AR: " + error.message);
+            console.error("AR Session Error:", error);
+            document.getElementById("status").style.display = "block";
+            document.getElementById("status").textContent =
+              "Error: " + error.message;
           }
         }
 
         onSelect(event) {
           if (this.reticle.visible) {
-            // Create image plane at reticle position
             const imageGeometry = new THREE.PlaneGeometry(1, 1);
             const imageMaterial = new THREE.MeshBasicMaterial({
               map: this.replacementTexture,
@@ -187,151 +183,76 @@
             });
 
             const imagePlane = new THREE.Mesh(imageGeometry, imageMaterial);
-
-            // Position the image at reticle location
             imagePlane.position.copy(this.reticle.position);
             imagePlane.rotation.copy(this.reticle.rotation);
 
-            // Adjust scale based on detected plane size
-            const detectedPlane = this.findNearestPlane(this.reticle.position);
-            if (detectedPlane) {
-              const { width, height } = this.getPlaneSize(detectedPlane);
-              imagePlane.scale.set(width, height / this.imageAspectRatio, 1);
-            }
+            // Default size if no plane detection
+            imagePlane.scale.set(1, 1 / this.imageAspectRatio, 1);
 
             this.scene.add(imagePlane);
             document.getElementById("status").textContent = "Image placed!";
           }
         }
 
-        findNearestPlane(position) {
-          let nearestPlane = null;
-          let minDistance = Infinity;
-
-          for (const [plane, planeMesh] of this.detectedPlanes) {
-            const distance = position.distanceTo(planeMesh.position);
-            if (distance < minDistance) {
-              minDistance = distance;
-              nearestPlane = plane;
-            }
-          }
-
-          return nearestPlane;
-        }
-
-        getPlaneSize(plane) {
-          const geometry = plane.geometry;
-          const size = new THREE.Vector3();
-          geometry.boundingBox.getSize(size);
-          return { width: size.x, height: size.y };
-        }
-
-        updateReticle(frame, referenceSpace) {
-          const session = frame.session;
-          const views = frame.getViewerPose(referenceSpace)?.views;
-
-          if (views && views.length > 0) {
-            const view = views[0];
-            const viewMatrix = new THREE.Matrix4().fromArray(
-              view.transform.matrix
-            );
-
-            // Ray for hit testing
-            const rayDir = new THREE.Vector3(0, 0, -1);
-            rayDir.applyMatrix4(viewMatrix);
-
-            const hitTestResults = frame.getHitTestResults(
-              session.requestHitTestSource({
-                space: referenceSpace,
-                offsetRay: new XRRay(view.transform.position, rayDir),
-              })
-            );
-
-            if (hitTestResults.length > 0) {
-              const hit = hitTestResults[0];
-              const pose = hit.getPose(referenceSpace);
-
-              this.reticle.visible = true;
-              this.reticle.position.set(
-                pose.transform.position.x,
-                pose.transform.position.y,
-                pose.transform.position.z
-              );
-              document.getElementById("status").textContent =
-                "Tap to place image";
-            } else {
-              this.reticle.visible = false;
-              document.getElementById("status").textContent =
-                "Move camera to detect surfaces";
-            }
-          }
-        }
-
-        processPlanes(frame, referenceSpace) {
-          const detectedPlanes = frame.detectedPlanes;
-
-          // Update or add new planes
-          for (const plane of detectedPlanes) {
-            if (!this.detectedPlanes.has(plane)) {
-              const planePose = frame.getPose(plane.planeSpace, referenceSpace);
-              if (planePose) {
-                // Create visual representation of detected plane
-                const geometry = new THREE.PlaneGeometry(1, 1);
-                const material = new THREE.MeshBasicMaterial({
-                  transparent: true,
-                  opacity: 0.3,
-                  side: THREE.DoubleSide,
-                });
-
-                const planeMesh = new THREE.Mesh(geometry, material);
-                planeMesh.position.set(
-                  planePose.transform.position.x,
-                  planePose.transform.position.y,
-                  planePose.transform.position.z
-                );
-
-                this.detectedPlanes.set(plane, planeMesh);
-                this.scene.add(planeMesh);
-              }
-            }
-          }
-        }
-
         render(timestamp, frame) {
           if (frame) {
             const referenceSpace = this.renderer.xr.getReferenceSpace();
+            const session = frame.session;
 
-            // Update plane detection
-            this.processPlanes(frame, referenceSpace);
-
-            // Update reticle position
-            this.updateReticle(frame, referenceSpace);
+            // Basic hit testing
+            if (session && referenceSpace) {
+              session
+                .requestHitTestSource({ space: referenceSpace })
+                .then((hitTestSource) => {
+                  const hitTestResults = frame.getHitTestResults(hitTestSource);
+                  if (hitTestResults.length) {
+                    const hit = hitTestResults[0];
+                    const pose = hit.getPose(referenceSpace);
+                    if (pose) {
+                      this.reticle.visible = true;
+                      this.reticle.position.set(
+                        pose.transform.position.x,
+                        pose.transform.position.y,
+                        pose.transform.position.z
+                      );
+                      document.getElementById("status").textContent =
+                        "Tap to place image";
+                    }
+                  } else {
+                    this.reticle.visible = false;
+                    document.getElementById("status").textContent =
+                      "Move to detect surfaces";
+                  }
+                });
+            }
           }
 
           this.renderer.render(this.scene, this.camera);
         }
       }
 
-      // Initialize the AR experience
+      // Initialize
       const arWindowReplacer = new ARWindowReplacer();
 
-      // Add button event listener
+      // Start button handler
       document.getElementById("startAR").addEventListener("click", () => {
         arWindowReplacer.startAR();
       });
 
-      // Check AR support on load
+      // Initial check
       window.addEventListener("load", async () => {
-        if (!navigator.xr) {
-          document.getElementById("startAR").textContent =
-            "WebXR not supported";
-          document.getElementById("startAR").disabled = true;
-          return;
-        }
-
-        const supported = await navigator.xr.isSessionSupported("immersive-ar");
-        if (!supported) {
-          document.getElementById("startAR").textContent = "AR not supported";
+        try {
+          if (!navigator.xr) {
+            throw new Error("WebXR not supported");
+          }
+          const supported = await navigator.xr.isSessionSupported(
+            "immersive-ar"
+          );
+          if (!supported) {
+            throw new Error("AR not supported");
+          }
+        } catch (error) {
+          document.getElementById("startAR").textContent = error.message;
           document.getElementById("startAR").disabled = true;
         }
       });
